| Bug #36702 | System restart fails after LOGFILE creation error | ||
|---|---|---|---|
| Submitted: | 14 May 2008 0:05 | Modified: | 21 Aug 16:28 |
| Reporter: | Hartmut Holzgraefe | ||
| Status: | Closed | ||
| Category: | Server: ClusterDD | Severity: | S3 (Non-critical) |
| Version: | mysql-5.1-telco-6.3 | OS: | Linux |
| Assigned to: | Jonas Oreland | Target Version: | |
| Tags: | 5.1.24-ndb-6.3.13 | ||
| Triage: | Triaged: D1 (Critical) | ||
[14 May 2008 0:05]
Hartmut Holzgraefe
[19 Feb 11:45]
Jonas Oreland
Note: added error insert 6016/6017 for reproducing this
[21 Aug 11:36]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/81255 2964 Jonas Oreland 2009-08-21 ndb - bug#36702 Handle cluster crash during create file{group}
[21 Aug 15:13]
Bugs System
Pushed into 5.1.35-ndb-6.3.26 (revid:jonas@mysql.com-20090821130746-x78pnclj4ph2s6l1) (version source revid:jonas@mysql.com-20090821105549-gchec4bo08hcd7w2) (merge vers: 5.1.35-ndb-6.3.26) (pib:11)
[21 Aug 15:13]
Bugs System
Pushed into 5.1.35-ndb-7.0.7 (revid:jonas@mysql.com-20090821131130-5ecm4jwh6itjov34) (version source revid:jonas@mysql.com-20090821130134-pyd31rchtu4q8h51) (merge vers: 5.1.35-ndb-7.0.7) (pib:11)
[21 Aug 15:14]
Bugs System
Pushed into 5.1.35-ndb-7.1.0 (revid:jonas@mysql.com-20090821131226-o6ub35a5eln0meis) (version source revid:jonas@mysql.com-20090821130432-7tqdvg3puedi54qp) (merge vers: 5.1.35-ndb-7.1.0) (pib:11)
[21 Aug 15:14]
Bugs System
Pushed into 5.1.35-ndb-6.2.19 (revid:jonas@mysql.com-20090821130547-d8i4pnm2hw7atv65) (version source revid:jonas@mysql.com-20090821093523-b01c9nxwnp97x204) (merge vers: 5.1.35-ndb-6.2.19) (pib:11)
[21 Aug 15:18]
Jonas Oreland
pushed to 6.2.19, 6.3.26 and 7.0.7
[21 Aug 16:28]
Jon Stephens
Documented bugfix in the NDB-6.2.19, 6.3.26 and 7.0.7 changelogs, as follows:
If the cluster crashed during the execution of a CREATE LOGFILE
GROUP statement, the cluster could not be restarted afterwards.
See also Bug #34102.
