ndb - bug#36702   Handle cluster crash during create file{group}